update: 翻译接口直接输出文本
